--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
       <h2>Make It Minis, Miniature Foods</h2>
       <h3>Mini food replicas that are put together with resin</h3>
     </header>
+    <footer>
+      This website was coded by Blossom Armstrong and is
+      <a href="https://github.com/BLSSMA/passion-project" target="_blank"
+        >open sourced</a
+      >
+    </footer>
   </body>
 </html>
