--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
     <title>Mini Foods</title>
   </head>
   <body>
-    <header>
-      <h1>I'm passionate about</h1>
-      <h2>Make It Minis, Miniature Foods</h2>
-      <h3>Mini food replicas that are put together with resin</h3>
-    </header>
-    <footer>
-      This website was coded by Blossom Armstrong and is
-      <a href="https://github.com/BLSSMA/passion-project" target="_blank"
-        >open sourced</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.I'm passionate about.</h3>
+        <h1>Make It Minis, Miniature Foods</h1>
+        <h2>Mini food replicas that are put together with resin</h2>
+        <a href="#">learn more</a>
+      </header>
+      <footer>
+        This website was coded by Blossom Armstrong and is
+        <a href="https://github.com/BLSSMA/passion-project" target="_blank"
+          >open sourced</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
