--- a/index.html
+++ b/index.html
@@ -20,11 +20,49 @@
         <h2>Mini food replicas that are put together with resin</h2>
         <a href="#">learn more</a>
       </header>
+
       <footer>
-        This website was coded by Blossom Armstrong and is
-        <a href="https://github.com/BLSSMA/passion-project" target="_blank"
-          >open sourced</a
-        >
+        <section class="grid">
+          <div>
+            <h3>More About Minis</h3>
+            <ul>
+              <li>
+                <a href="https://shop.mgae.com/collections/make-it-mini-food"
+                  >Minis Website</a
+                >
+              </li>
+              <li>
+                <a href="https://www.reddit.com/r/miniverse_makeitmini/"
+                  >Minis Reddit</a
+                >
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@officialminiverse"
+                  >Minis Youtube</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>
+              Hi, my name is Blossom and I love putting together MGA's Make It
+              Minis! They are a great artistic craft and are able to be done by
+              even those less craft-inclined people!
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              This website was coded by Blossom Armstrong and is
+              <a
+                href="https://github.com/BLSSMA/passion-project"
+                target="_blank"
+                >open sourced</a
+              >
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
