imported img 'burger' and designed layout for first section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,35 @@
         <h2>Mini food replicas that are put together with resin</h2>
         <a href="#">learn more</a>
       </header>
-
+      <main>
+        <section class="grid">
+          <div>
+            <img src="img/burger.jpeg" alt="" />
+          </div>
+          <div class="main-section-text">
+            <h3>Make-It-Minis</h3>
+            <h2>An easy way to create</h2>
+            <p>
+              Make-It-Mini's are an absolute delight to build and create. These
+              miniature foods, meticulously put together with resin, offer
+              endless hours of fun and satisfaction. As someone who has crafted
+              numerous Make-It-Mini's, I can attest to the joy and relaxation
+              that comes with assembling these tiny, detailed pieces. The
+              process of building them, from unpacking the tiny food containers
+              to carefully arranging each component, is both engaging and
+              rewarding. <br /><br />
+              I have enthusiastically shared my love for Make-It-Mini's with all
+              my friends, inviting them to join me in this delightful hobby.
+              It's a wonderful way to bond with loved ones while indulging in a
+              shared creative activity. Whether it's crafting tiny burgers,
+              cupcakes, or sushi, the experience of making Make-It-Mini's is
+              always a source of laughter, creativity, and enjoyment. Join me in
+              the world of miniature creations, and let's have a blast building
+              Make-It-Mini's together!
+            </p>
+          </div>
+        </section>
+      </main>
       <footer>
         <section class="grid">
           <div>
