copied card x3 and changed info per card

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <main>
         <section class="grid">
           <div>
-            <img src="img/burger.jpeg" alt="" />
+            <img src="img/apricot-cake.jpeg" alt="" />
           </div>
           <div class="main-section-text">
             <h3>Make-It-Minis</h3>
@@ -46,6 +46,83 @@
               the world of miniature creations, and let's have a blast building
               Make-It-Mini's together!
             </p>
+          </div>
+        </section>
+        <section class="secondary">
+          <h2>MINIS</h2>
+          <h3>My Favorite Mini Creations</h3>
+          <div class="grid three-column-grid">
+            <div class="card">
+              <div class="card-header">
+                <img src="img/burger.jpeg" alt="" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>Burgers</h4>
+                <p>
+                  This model included lettuce, cheese, and tomato to top the
+                  burgers!
+                </p>
+                <h5>To Top it all Off</h5>
+                <p>
+                  The burgers come with a tiny bottle of "ketchup". This is
+                  actually the UV resin that holds everything together!
+                </p>
+                <h5>Series</h5>
+                <p>This mini can be found in the seies: Diner series 2</p>
+
+                <div class="card-footer btn">
+                  <a href="#">Learn More</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img src="img/smoothies.jpeg" alt="" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>Smoothies</h4>
+                <p>
+                  This model included different fruits to top off the smoothie.
+                  Not to mention the tiny straw!
+                </p>
+                <h5>To Top it all Off</h5>
+                <p>
+                  The smoothies come with a bag of crushed ice and a smoothie
+                  mix. The mix is actually the UV resin that holds everything
+                  together.
+                </p>
+                <h5>Series</h5>
+                <p>This mini can be found in the seies: cafe series 2</p>
+
+                <div class="card-footer btn">
+                  <a href="#">Learn More</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img src="img/tart.jpeg" alt="" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>Fruit Tart</h4>
+                <p>
+                  This model included an assortment of tiny fruits and berries!
+                </p>
+                <h5>To Top it all Off</h5>
+                <p>
+                  The fruit tart came with a bottle of fruit glaze. This glaze
+                  is actually the UV resin that holds everything together.
+                </p>
+                <h5>Series</h5>
+                <p>This mini can be found in the seies: Diner seies 1</p>
+
+                <div class="card-footer btn">
+                  <a href="#">Learn More</a>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
