finalized SEO and titles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Blossom's collection of make-it-minis" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Mini Foods</title>
+    <title>Mini Foods Passion Project</title>
   </head>
   <body>
     <div class="container">
@@ -18,12 +19,15 @@
         <h3>.I'm passionate about.</h3>
         <h1>Make It Minis, Miniature Foods</h1>
         <h2>Mini food replicas that are put together with resin</h2>
-        <a href="#">learn more</a>
+        <a href="#learn-more" title="Learn More">learn more</a>
       </header>
       <main>
         <section class="grid grid-two-columns">
           <div>
-            <img src="img/apricot-cake.jpeg" alt="" />
+            <img
+              src="img/apricot-cake.jpeg"
+              alt="A close up view of an apricot cheesecake topped with apricots almonds and glaze"
+            />
           </div>
           <div class="main-section-text">
             <h3>Make-It-Minis</h3>
@@ -48,13 +52,17 @@
             </p>
           </div>
         </section>
-        <section class="secondary">
-          <h2>MINIS</h2>
-          <h3>My Favorite Mini Creations</h3>
+        <section class="secondary" id="learn-more">
+          <h3>MINIS</h3>
+          <h2>My Favorite Mini Creations</h2>
           <div class="grid three-column-grid">
             <div class="card">
               <div class="card-header grid-two-columns">
-                <img src="img/burger.jpeg" alt="" class="img-responsive" />
+                <img
+                  src="img/burger.jpeg"
+                  alt="a close up picture of a burger with lettuce cheese and tomato"
+                  class="img-responsive"
+                />
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d744442.7688053092!2d-71.57583455229063!3d43.2099179306255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e299e7bc8a9df7%3A0xf0c02122387e88f2!2sTarget!5e0!3m2!1sen!2sus!4v1722296541765!5m2!1sen!2sus"
                   width="100%"
@@ -79,14 +87,23 @@
                 <p>This mini can be found in the seies: Diner series 2</p>
 
                 <div class="card-footer btn">
-                  <a href="#">Learn More</a>
+                  <a
+                    href="https://www.instagram.com/p/C5W791SvOV6/"
+                    target="_blank"
+                    title="Instagram"
+                    >Learn More</a
+                  >
                 </div>
               </div>
             </div>
 
             <div class="card">
               <div class="card-header grid-two-columns">
-                <img src="img/smoothies.jpeg" alt="" class="img-responsive" />
+                <img
+                  src="img/smoothies.jpeg"
+                  alt="A picture of 2 pink smoothies topped with fruit in a snowy outdoor scene"
+                  class="img-responsive"
+                />
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92968.2230520564!2d-70.92915461345684!3d43.26699203261697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e2998555555555%3A0x45513ee0fc7c085!2sWalmart%20Supercenter!5e0!3m2!1sen!2sus!4v1722434871775!5m2!1sen!2sus"
                   width="100%"
@@ -112,14 +129,23 @@
                 <p>This mini can be found in the seies: cafe series 2</p>
 
                 <div class="card-footer btn">
-                  <a href="#">Learn More</a>
+                  <a
+                    href="https://www.facebook.com/groups/681213859355721/"
+                    target="_blank"
+                    title="Facebook"
+                    >Learn More</a
+                  >
                 </div>
               </div>
             </div>
 
             <div class="card">
               <div class="card-header grid-two-columns">
-                <img src="img/tart.jpeg" alt="" class="img-responsive" />
+                <img
+                  src="img/tart.jpeg"
+                  alt="a closeup picture of a spatula removing a slice from a fruit tart"
+                  class="img-responsive"
+                />
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2889.5569834290814!2d-70.70278492368195!3d43.59494325619657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cb2c1002260bbbb%3A0xbe95b6320a5c9c8c!2sKroger%2C%20Lexington%2C%20Ky!5e0!3m2!1sen!2sus!4v1722435022872!5m2!1sen!2sus"
                   width="100%"
@@ -143,7 +169,12 @@
                 <p>This mini can be found in the seies: Diner seies 1</p>
 
                 <div class="card-footer btn">
-                  <a href="#">Learn More</a>
+                  <a
+                    href="https://www.mgae.com/"
+                    target="_blank"
+                    title="Official Website"
+                    >Learn More</a
+                  >
                 </div>
               </div>
             </div>
@@ -1869,17 +1900,23 @@
             <h3>More About Minis</h3>
             <ul>
               <li>
-                <a href="https://shop.mgae.com/collections/make-it-mini-food"
+                <a
+                  href="https://shop.mgae.com/collections/make-it-mini-food"
+                  title="Official Website"
                   >Minis Website</a
                 >
               </li>
               <li>
-                <a href="https://www.reddit.com/r/miniverse_makeitmini/"
+                <a
+                  href="https://www.reddit.com/r/miniverse_makeitmini/"
+                  title="Reddit Page"
                   >Minis Reddit</a
                 >
               </li>
               <li>
-                <a href="https://www.youtube.com/@officialminiverse"
+                <a
+                  href="https://www.youtube.com/@officialminiverse"
+                  title="Youtube Channel"
                   >Minis Youtube</a
                 >
               </li>
@@ -1900,6 +1937,7 @@
               <a
                 href="https://github.com/BLSSMA/passion-project"
                 target="_blank"
+                title="Github"
                 >open sourced</a
               >
             </p>
